@@ -1,10 +1,17 @@
-2006-08.8 Andreas Obergrusberger <tradiaz@yahoo.de> 
+2006-10-5 Andreas Obergrusberger <tradiaz@yahoo.de>
+	* Daniel sent me patches that will show the parent
+	  directory in the browse screen title
+	*...and a patch that allows the user to specify
+	 shortened album names in for example the playlist screen
+	 via %shortalbum% 
+	
+2006-08-8 Andreas Obergrusberger <tradiaz@yahoo.de> 
 	* Here it is! the splash screen. asking you for password 
 	  everytime and featuring a nice animation :)
 	* ncmpc will now always ask for a password when it's not 
 	  permitted to execute a command
 
-2006-08.8 Andreas Obergrusberger <tradiaz@yahoo.de> 
+2006-08-8 Andreas Obergrusberger <tradiaz@yahoo.de> 
 	* Avuton fixed some warning
 	* fixed a bug that doubled empty lines
 	  when loading lyrics from hd
